--- a/index.html
+++ b/index.html
@@ -187,8 +187,8 @@
     <h1>Admin Dashboard - Registered Users</h1>
 
     <div class="btns">
-      <a href="#"><button>Program <br>List</button></a>
-      <a href="#"><button>Admin Dashboard</button></a>
+      <a href="https://uppundaadithya.github.io/APPROVED-LIST/"><button>Program <br>List</button></a>
+      <a href="https://uppundaadithya.github.io/ADMIN-DASHBOARD/"><button>Admin Dashboard</button></a>
     </div>
 
     <div class="inputarea6">
